--- a/index.html
+++ b/index.html
@@ -57,11 +57,243 @@
             <img src="assets/Фотосессия с цветным светом.jfif" alt="">
         </div>
 
+    </section>
 
+    <!--education-->
+
+    <section class="education" id="education">
+        <h2 class="heading">education</h2>
+
+        <div class="timeline-items">
+
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-date">
+                    2021
+                </div>
+                <div class="timeline-content">
+                    <h3>hight school</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur minus beatae, doloremque
+                        quod illo sint mollitia, voluptatem ea libero ex porro sunt harum, ut enim vel soluta amet
+                        iste! Consequuntur.</p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-date">
+                    2021
+                </div>
+                <div class="timeline-content">
+                    <h3>university</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur minus beatae, doloremque
+                        quod illo sint mollitia, voluptatem ea libero ex porro sunt harum, ut enim vel soluta amet
+                        iste! Consequuntur.</p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-date">
+                    2023
+                </div>
+                <div class="timeline-content">
+                    <h3>intership</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur minus beatae, doloremque
+                        quod illo sint mollitia, voluptatem ea libero ex porro sunt harum, ut enim vel soluta amet
+                        iste! Consequuntur.</p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-date">
+                    2024
+                </div>
+                <div class="timeline-content">
+                    <h3>job 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur minus beatae, doloremque
+                        quod illo sint mollitia, voluptatem ea libero ex porro sunt harum, ut enim vel soluta amet
+                        iste! Consequuntur.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--services-->
+
+
+
+    <section class="services" id="services">
+        <h2 class="heading">services</h2>
+
+        <div class="services-container">
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>ui design</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit error maiores eveniet illum sequi
+                        ipsum vel est quibusdam a inventore!
+                    </p>
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>front end developer</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit error maiores eveniet illum sequi
+                        ipsum vel est quibusdam a inventore!
+                    </p>
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>backend developer</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit error maiores eveniet illum sequi
+                        ipsum vel est quibusdam a inventore!
+                    </p>
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>testing</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit error maiores eveniet illum sequi
+                        ipsum vel est quibusdam a inventore!
+                    </p>
+                </div>
+            </div>
+
+
+        </div>
     </section>
 
 
 
+    <!--testimonials-->
+
+    <section class="testimonials" id="testimonials">
+        <div class="testimonials-box">
+            <h2 class="heading">Testimonials</h2>
+
+            <div class="wrapper">
+                <div class="testimonial-item">
+                    <img src="assets/Lauren de Graaf image.jfif">
+                    <h2>Marilyn</h2>
+                    <div class="rating">
+                        <i class="bx bxs-star" id="star"></i>
+                        <i class="bx bxs-star" id="star"></i>
+                        <i class="bx bxs-star" id="star"></i>
+                        <i class="bx bxs-star" id="star"></i>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. At nihil corrupti quidem fugiat
+                        exercitationem eos praesentium. Totam quia quas ipsa enim accusantium harum possimus nam autem
+                        quasi, facilis, earum tempore.
+                    </p>
+                </div>
+
+                <div class="testimonial-item">
+                    <img src="assets/Photography.jfif">
+                    <h2>julia</h2>
+                    <div class="rating">
+                        <i class="bx bxs-star" id="star"></i>
+                        <i class="bx bxs-star" id="star"></i>
+                        <i class="bx bxs-star" id="star"></i>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. At nihil corrupti quidem fugiat
+                        exercitationem eos praesentium. Totam quia quas ipsa enim accusantium harum possimus nam autem
+                        quasi, facilis, earum tempore.
+                    </p>
+                </div>
+
+                <div class="testimonial-item">
+                    <img src="assets/Color me.jfif">
+                    <h2>rebecca</h2>
+                    <div class="rating">
+                        <i class="bx bxs-star" id="star"></i>
+                        <i class="bx bxs-star" id="star"></i>
+                        <i class="bx bxs-star" id="star"></i>
+                        <i class="bx bxs-star" id="star"></i>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. At nihil corrupti quidem fugiat
+                        exercitationem eos praesentium. Totam quia quas ipsa enim accusantium harum possimus nam autem
+                        quasi, facilis, earum tempore.
+                    </p>
+                </div>
+
+
+            </div>
+        </div>
+    </section>
+
+
+
+
+    <!--contact-->
+
+    <section class="contact" id="contact">
+        <h2 class="heading">contact <span>Me</span></h2>
+
+        <form action="">
+            <div class="input-group">
+                <div class="input-box">
+                    <input type="text" placeholder="Full Name">
+                    <input type="email" placeholder="Email">
+                </div>
+                <div class="input-box">
+                    <input type="number" placeholder="Phone Number">
+                    <input type="text" placeholder="Subject">
+                </div>
+            </div>
+
+            <div class="input-group-2">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your message"></textarea>
+                <input type="submit" value="Send message" class="btn">
+            </div>
+        </form>
+    </section>
+
+
+    <!--footer-->
+
+
+    <footer class="footer">
+        <div class="social">
+                <a href="#"><i class="bx bxl-linkedin"></i></a>
+                <a href="#"><i class="bx bxl-github"></i></a>
+                <a href="#"><i class="bx bxl-instagram"></i></a>
+                <a href="#"><i class="bx bxl-twitter"></i></a>
+        </div>
+        
+        <ul class="list">
+            <li>
+                <a href="#">FAQ</a>
+            </li>
+            <li>
+                <a href="#">Services</a>
+            </li>
+            <li>
+                <a href="#">About Me</a>
+            </li>
+            <li>
+                <a href="#">Contact</a>
+            </li>
+            <li>
+                <a href="#">Testimonials</a>
+            </li>
+        </ul>
+        <p class="copyright">
+            © Amelia Morgan | All rights reserved
+        </p>
+
+    </footer>
 
     <script src="script.js"></script>
 </body>
